# livepeer-workflow-kit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh  requirements.workbench.txt
references/raspberry_ninja/: publish.py
references/roboflow-inference/inference/core/workflows/execution_engine/introspection/: blocks_loader.py
roboflow_livepeer_blocks/: __init__.py  audio.py  authoring.py  block.py  client.py  config.py  florence_client.py  framework.py  ingest.py  livepeer_http_chunking_client.py  livepeer_realtime_client.py  local_ingest.py  nemo_client.py  providers.py  streaming.py  true_streaming.py  vdo_signaling_bridge.py  vision.py
scripts/: discover_livepeer_modules.py  profile_resource_usage.py  publish_local_audio_ingest_pcm.py  run_livepeer_workflow_runtime.py  run_loc_audio_transcription_smoke.py  run_local_audio_ingest_server.py  run_vdo_signaling_bridge.py  run_workflow_session.py
skills/livepeer-workflow-construction/: SKILL.md
skills/livepeer-workflow-construction/agents/: openai.yaml
skills/livepeer-workflow-construction/references/: artifact-contract.md  authoring-surface.md  provider-discovery.md  raw-block-catalog.md  runtime-contract.md  source-diagnostics.md
tests/: test_audio_chunking.py  test_authoring_surface.py  test_block.py  test_client.py  test_florence_client.py  test_ingest.py  test_livepeer_http_chunking_client.py  test_livepeer_remote_true_streaming.py  test_local_ingest.py  test_true_streaming_client.py  test_vdo_signaling_bridge.py  test_workflows_plugin_loading.py
(+1 files in other folders)
