[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roboflow-livepeer-blocks"
version = "0.1.0"
description = "Livepeer Open Clearinghouse audio transcription block for Roboflow Workflows."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.25",
  "pydantic>=2",
  "python-multipart>=0.0.9",
  "uvicorn>=0.29",
  "websockets>=13.0,<16.0",
]

[tool.setuptools]
packages = ["roboflow_livepeer_blocks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
